manifests/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: arg
  labels:
    app: arg
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: system:janus-idp
spec:
  ports:
    - name: http-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: arg
